--- a/react-bootstrap-thesis/src/register.html
+++ b/react-bootstrap-thesis/src/register.html
@@ -69,6 +69,8 @@
 
   .main-color{
   background-color: #003e29;
+  color: #ffffff;
+  margin-top: 5px;
   }
   #icons:hover{
     background-color:#24816a ;
@@ -80,12 +82,12 @@
     color: white;
   }
   #floating.focused {
-    color: #299479; /* Change the color to your desired color */
+    color: #ffffff; /* Change the color to your desired color */
     
   }
   #floating::after {
     color: #ffffff; /* Change to your default color */
-    background-color: none;
+    background-color: #003e29;
   }
 body{
     /* padding: 4rem 0; */
@@ -112,7 +114,7 @@ body{
         <span class="input-group-text me-1 main-color" id="icons" style="height:58px;"><i class="fa-regular fa-user"></i></span>
         <div class="form-floating">
           <input type="text" class="form-control main-color" id="floatingInputGroup1" placeholder="Username" required>
-          <label for="floatingInputGroup1" class="form-label" id="floating">Username</label>
+          <label for="floatingInputGroup1" class="form-label mt-1" id="floating">Enter your username</label>
           <div class="invalid-feedback">Please enter a username. ex: user1234</div>
         </div>
       </div>
@@ -121,7 +123,7 @@ body{
         <span class="input-group-text me-1 main-color" id="icons" style="height:58px;"><i class="fa-solid fa-phone"></i></span>
         <div class="form-floating">
           <input type="tel"  class="form-control main-color" id="floatingInputGroup2" placeholder="Password" required>
-          <label for="floatingInputGroup2" class="form-label" id="floating">Enter your phone number</label>
+          <label for="floatingInputGroup2" class="form-label mt-1" id="floating">Enter your phone number</label>
           <div class="invalid-feedback">Please enter your phone number. ex: 123-456-7890</div>
         </div>
       </div>
@@ -130,7 +132,7 @@ body{
         <span class="input-group-text me-1 main-color" id="icons" style="height:58px;"><i class="fa-solid fa-envelope"></i></span>
         <div class="form-floating">
           <input type="email" class="form-control main-color" id="floatingInputGroup2" placeholder="Password" required>
-          <label for="floatingInputGroup2" class="form-label" id="floating">Enter your email</label>
+          <label for="floatingInputGroup2" class="form-label mt-1" id="floating">Enter your email</label>
           <div class="invalid-feedback">Please enter your email. ex: person21@gmail.com</div>
         </div>
       </div>
@@ -139,7 +141,7 @@ body{
         <span class="input-group-text me-1 main-color" id="icons" style="height:58px;"><i class="fa-solid fa-lock"></i></span>
         <div class="form-floating">
           <input type="password" class="form-control main-color" id="floatingInputGroup2" placeholder="Password" required>
-          <label for="floatingInputGroup2" class="form-label" id="floating">Enter Password</label>
+          <label for="floatingInputGroup2" class="form-label mt-1" id="floating">Enter Password</label>
           <div class="invalid-feedback">Please enter your password.</div>
         </div>
       </div>
@@ -148,7 +150,7 @@ body{
         <span class="input-group-text me-1 main-color" id="icons" style="height:58px;"><i class="fa-solid fa-lock"></i></span>
         <div class="form-floating">
           <input type="password" class="form-control main-color" id="floatingInputGroup2" placeholder="Password" required>
-          <label for="floatingInputGroup2" class="form-label" id="floating">Confirm Password</label>
+          <label for="floatingInputGroup2" class="form-label mt-1" id="floating">Confirm Password</label>
           <div class="invalid-feedback">Please confirm your password.</div>
         </div>
       </div>
