--- a/react-bootstrap-thesis/src/register.html
+++ b/react-bootstrap-thesis/src/register.html
@@ -6,7 +6,7 @@
     <title>Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="code.css">
+<link rel="stylesheet" href="./code.css">
 <script src="https://kit.fontawesome.com/62736cc676.js" crossorigin="anonymous"></script>
 
 </head>
@@ -73,7 +73,7 @@
   margin-top: 5px;
   }
   #icons:hover{
-    background-color:#24816a ;
+    background-color:#003e29 ;
   }
   #floating {
     color: rgb(255, 255, 255); /* Change placeholder color to red */
