--- a/react-bootstrap-thesis/src/register.html
+++ b/react-bootstrap-thesis/src/register.html
@@ -13,6 +13,8 @@
 <style>
   *{
     font-family: "Roboto", sans-serif;
+    margin: 0;
+    padding: 0;
   }
     .container { 
         display: flex;
@@ -108,7 +110,9 @@ body{
 
 
 
-<div class="container">
+<div id="responsive-container" class="">
+  <!-- Content goes here -->
+
   <form class="row-1 g-4 mx-auto needs-validation form" novalidate>
     <div class="text-center">
       <img class="" width="30%" src="../public/jsmjc.png" class="rounded" alt="...">
