--- a/react-bootstrap-thesis/src/register.html
+++ b/react-bootstrap-thesis/src/register.html
@@ -110,7 +110,7 @@ body{
 
 
 
-<div id="responsive-container" class="">
+<div id="responsive-container" class="container">
   <!-- Content goes here -->
 
   <form class="row-1 g-4 mx-auto needs-validation form" novalidate>
