--- a/react-bootstrap-thesis/src/dashboard.html
+++ b/react-bootstrap-thesis/src/dashboard.html
@@ -35,8 +35,11 @@
     .nav, .tab-content{
         display: none;
     }
+    #ul{
+      padding-right: 4ren;
+    }
   }
-
+  
   @media (min-width: 768px) {
     body::before {
       content: "MD";
@@ -68,20 +71,54 @@
 .icon-text {
     display: inline-block;
 }
+
+.color-color{
+  background-color: #003e29 !important;
+}
+
   }
 
 </style>
 </head>
+<style>
+
+</style>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="hidden-nav">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar w/ text</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-dark bg-dark color-color " id="">
+      <div class="container-fluid ">
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- <div class="dropdown " style="padding-right: 2rem;">
+          <button class="btn text-light dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../public/logo192.png" height="24px" alt="" class="m-1"><span class="d-none d-md-block">Enrico Pedrajeta</span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 " >
+          <ul class="dropdown-menu dropdown-menu-dark " id="dropdown">
+            <li><a class="dropdown-item " href="#">My profile</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+          </ul>
+        </div> -->
+
+        <div class="btn-group">
+          <button class="btn text-light dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../public/logo192.png" height="24px" alt="" class="m-1"><span class="d-none d-md-block">Enrico Pedrajeta</span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+            <li><a class="dropdown-item" href="#">My profile</a></li>
+            <li><a class="dropdown-item" href="#">Log out</a></li>
+          </ul>
+        </div>
+</div>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">My profile</a>
               </li>
@@ -89,16 +126,42 @@
                 <a class="nav-link" href="#">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Schedule</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Grades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Syllabus</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Settings</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Logout</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li> -->
             </ul>
-            <span class="navbar-text">
-              Navbar text with an inline element
-            </span>
-          
+            <!-- <form class="d-flex mt-3" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-success" type="submit">Search</button>
+            </form> -->
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 <style>
 
 </style>
